--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "version": "1.0.8",
   "license": "MIT",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.mjs",
+  "types": "dist/cjs/index.d.ts",
   "files": [
     "dist"
   ],
   "keywords": [
-    "react", 
-    "offscreen", 
-    "react-offscreen", 
+    "react",
+    "offscreen",
+    "react-offscreen",
+    "react-activity",
     "keep-alive"
   ],
   "homepage": "https://github.com/IVLIU/react-offscreen",
@@ -17,54 +19,41 @@
     "url": "https://github.com/IVLIU/react-offscreen"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=16"
   },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test --passWithNoTests",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
+    "help": "rslib --help",
+    "build": "rslib build",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
   "peerDependencies": {
-    "react": ">=17"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
+    "react": ">=17",
+    "react-dom": ">=17"
   },
   "name": "@ivliu/react-offscreen",
   "author": "ivliu",
-  "module": "dist/react-offscreen.esm.js",
   "size-limit": [
     {
-      "path": "dist/react-offscreen.cjs.production.min.js",
+      "path": "dist/cjs/index.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/react-offscreen.esm.js",
+      "path": "dist/esm/index.mjs",
       "limit": "10 KB"
     }
   ],
   "devDependencies": {
+    "@rsbuild/plugin-react": "^1.0.5",
+    "@rslib/core": "^0.0.15",
     "@size-limit/preset-small-lib": "^8.2.4",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "husky": "^8.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "size-limit": "^8.2.4",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.5.0",
-    "typescript": "^5.3.3"
+    "tslib": "^2.8.0",
+    "typescript": "^5.6.3"
   }
 }
