--- a/package.json
+++ b/package.json
@@ -25,11 +25,8 @@
     "help": "rslib --help",
     "build": "rslib build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
-  },
-  "peerDependencies": {
-    "react": ">=17",
-    "react-dom": ">=17"
+    "analyze": "size-limit --why",
+    "prepare": "husky"
   },
   "name": "@ivliu/react-offscreen",
   "author": "ivliu",
@@ -43,13 +40,19 @@
       "limit": "10 KB"
     }
   ],
+  "peerDependencies": {
+    "react": ">=17",
+    "react-dom": ">=17"
+  },
   "devDependencies": {
     "@rsbuild/plugin-react": "^1.0.5",
     "@rslib/core": "^0.0.15",
     "@size-limit/preset-small-lib": "^8.2.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "husky": "^8.0.3",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "size-limit": "^8.2.4",
