--- a/package.json
+++ b/package.json
@@ -45,20 +45,25 @@
     "react-dom": ">=17"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@rsbuild/plugin-react": "^1.0.5",
-    "@rslib/core": "^0.0.15",
-    "@size-limit/preset-small-lib": "^8.2.4",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
-    "prettier": "3.3.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "size-limit": "^8.2.4",
-    "tslib": "^2.8.0",
-    "typescript": "^5.6.3"
-  }
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@rsbuild/plugin-react": "^1.1.0",
+    "@rslib/core": "^0.3.2",
+    "@size-limit/preset-small-lib": "^11.1.6",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "eslint": "^9.18.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.1",
+    "prettier": "3.4.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "size-limit": "^11.1.6",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0"
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
